--- a/website2024/index.html
+++ b/website2024/index.html
@@ -9,20 +9,19 @@
     <meta content="" name="keywords">
   
     <!-- Favicons -->
-    <link href="assets/favicon.png" rel="icon">
-    <link href="assets/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="src/assets/favicon.png" rel="icon">
+    <link href="src/assets/apple-touch-icon.png" rel="apple-touch-icon">
   
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   
     <!-- Template Main CSS File -->
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="src/assets/css/style.css" rel="stylesheet">
     
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <!-- <script src="contact.js"></script> -->
-
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
